fix timestamp position on mobile

--- a/web/static/app/modules/_range-slider.sass
+++ b/web/static/app/modules/_range-slider.sass
@@ -109,9 +109,7 @@ $range-label-width: 60px !default
         align-items: center
 
         .episode-player &
-            padding: 0 0 0 1rem
-            @media (min-width: $smartphone)
-                padding: 0
+            padding: 0
 
         & > span
             display: none
